# serop

./: README.md  main.py  pyproject.toml  queries.py
templates/: main.html
templates/static/: main.css  main.js
